--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -23,7 +23,7 @@
                 <input id="pcIdInput" type="number" name="pcIdInput"><br><br>
 
                 <label for="conditionInput">Listing's Main Condition:</label>
-                <select typ id="conditionInput" name="conditionInput" required>
+                <select id="conditionInput" name="conditionInput" required>
                     <option value="">Select a Condition</option>
                     <option value="Brand New">Brand New</option>
                     <option value="Like New/Open Box">Like New/Open Box</option>
@@ -59,18 +59,22 @@
                 <label for="shippingPriceInput">Shipping Price:</label>
                 <input id="shippingPriceInput" type="number" name="shippingPriceInput"><br><br>
                 
+                <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
+                <textarea id="tradesInput" type="text" name="tradesInput"></textarea><br><br>
+                
                 <label for="descriptionInput">Description:</label>
                 <textarea id="descriptionInput" type="text" name="descriptionInput"></textarea><br><br>
 
-                <label for="shipMethodInput">Return Policy:</label>
-                <select typ id="shipMethodInput" name="shipMethodInput" required>
+                <label for="shipMethodInput">Shipping Method:</label>
+                <select id="shipMethodInput" name="shipMethodInput" required>
                     <option value="">Select a Condition</option>
                     <option value="Shipping">Shipping</option>
                     <option value="Local Meetup">Local Meetup</option>
+                    <option value="Both Shipping and Local Meetup">Both</option>
                 </select><br><br>
 
                 <label for="returnPolicyInput">Return Policy:</label>
-                <select typ id="returnPolicyInput" name="returnPolicyInput" required>
+                <select id="returnPolicyInput" name="returnPolicyInput" required>
                     <option value="">Select a Condition</option>
                     <option value="No Returns">No Returns</option>
                     <option value="No Preference">No Preference</option>
@@ -93,6 +97,7 @@
             <p id="errorMainCond" hidden></p>
             <p id="errorPrice" hidden></p>
             <p id="errorShipPrice" hidden></p>
+            <p id="errorTrades" hidden></p>
             <p id="errorDesc" hidden></p>
             <p id="errorRetPol" hidden></p>
             <p id="errorShipMethod" hidden></p>
