Added About Us and some middleware

--- a/views/aboutUs.handlebars
+++ b/views/aboutUs.handlebars
@@ -1,4 +1,21 @@
 <h1>About Joystick Junction</h1>
-    <p>
-        About Us Info goes here with maybe a couple images.
-    </p>
+
+<h2>We're glad you're here!</h2>
+
+
+<p>First of all, we value authenticity. This website is more than a simple gaming marketplace where clients can sell or buy games; it is an environment where 
+users know they can purchase games at reasonable prices. Often enough, video game collectors fall for the common trap of deceptive marketing and sky-high prices. We seek to 
+eliminate that and utilize the Price Chart API to ensure users see average price data for their titles.</p>
+
+<img src="../public/images/arcade.jpg" alt="Arcade">
+
+<p>Furthermore, we value user satisfaction. In addition to transparency, users have the choice to leave reviews to their respective sellers/buyers. It is the ideal
+system for those who want to leave feedback! Our profile system allows you to see others' past reviews as well.</p>
+
+<img src="../public/images/retro.jpg" alt="Arcade">
+
+<p>Lastly, we seek to provide an exceptional experience for our target demographic: collectors and video game enthusiasts of all kinds. No matter if you are a seasoned
+video game collector or you are just looking to sell old titles; Joystick Junction is the place for you!</p>
+
+
+<aside>Our website and transaction system is designed and tailored for users in the United States.</aside>
