--- a/views/createBuyingListing.handlebars
+++ b/views/createBuyingListing.handlebars
@@ -9,6 +9,8 @@
         <div>
             <form method="POST" id="listing-form" action="/PriceChartSearch" enctype="multipart/form-data">
 
+                <div id="listingTypeInput" value="Buy"></div>
+
                 <label for="TitleInput">Listing Title:</label>
                 <input id="TitleInput" type="text" name="TitleInput" required><br><br>
 
@@ -48,9 +50,6 @@
                 
                 <label for="priceInput">Price:</label>
                 <input id="priceInput" type="number" name="priceInput" required><br><br>
-
-                <label for="shippingPriceInput">Shipping Price:</label>
-                <input id="shippingPriceInput" type="number" name="shippingPriceInput" required><br><br>
                 
                 <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
                 <textarea id="tradesInput" type="text" name="tradesInput" required></textarea><br><br>
@@ -66,24 +65,11 @@
                     <option value="Both Shipping and Local Meetup">Both</option>
                 </select><br><br>
 
-                <label for="returnPolicyInput">Return Policy:</label>
-                <select id="returnPolicyInput" name="returnPolicyInput" required>
-                    <option value="">Select a Condition</option>
-                    <option value="No Returns">No Returns</option>
-                    <option value="No Preference">No Preference</option>
-                    <option value="30 Day Returns (Buyer pays for return shipping)">30 Day Returns (Buyer pays for return shipping)</option>
-                    <option value="30 Day Returns (Seller pays for return shipping)">30 Day Returns (Seller pays for return shipping)</option>
-                    <option value="60 Day Returns (Buyer pays for return shipping)">60 Day Returns (Buyer pays for return shipping)</option>
-                    <option value="60 Day Returns (Seller pays for return shipping)">60 Day Returns (Seller pays for return shipping)</option>
-                    <option value="90 Day Returns (Buyer pays for return shipping)">90 Day Returns (Buyer pays for return shipping)</option>
-                    <option value="90 Day Returns (Seller pays for return shipping)">90 Day Returns (Seller pays for return shipping)</option>
-                </select><br><br>
-
                 <label for="imageInput">Submit images here:</label>
                 <input type="file" id="imageInput" name="imageInput" multiple required><br><br>
 
                 <label for="listingTypeInput">Confirm to make listing</label>
-                <input id="listingTypeInput" type="checkbox" name="listingTypeInput" value="Sell" required><br><br>
+                <input id="listingTypeInput" type="checkbox" name="listingTypeInput" value="Buy" required><br><br>
 
                 <button type="submit">Register</button>
             </form>
@@ -92,10 +78,8 @@
             <p id="errorPCID" hidden></p>
             <p id="errorMainCond" hidden></p>
             <p id="errorPrice" hidden></p>
-            <p id="errorShipPrice" hidden></p>
             <p id="errorTrades" hidden></p>
             <p id="errorDesc" hidden></p>
-            <p id="errorRetPol" hidden></p>
             <p id="errorShipMethod" hidden></p>
             <p id="errorImgs" hidden></p>
             {{#if error}}
@@ -128,4 +112,4 @@
                     {{/if}}
                 </div>
         </div>
-        <script src="../public/js/listingCheck.js"></script>
+        <script src="../public/js/buyingListingCheck.js">
