--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,12 @@
         <h1 class="JJ">Joystick Junction</h1>
         <nav>
             <div class="btn-group" style="width:100%">
-                <button style="width:20%" onclick="window.location.href = 'http://localhost:3000/'">Homepage</button>
-                <button style="width:20%" onclick="window.location.href = 'http://localhost:3000/sellinglistings'">Selling Listings</button>
-                <button style="width:20%" onclick="window.location.href = 'http://localhost:3000/buyinglistings'">Buying Listings</button>
-                <button style="width:20%" onclick="window.location.href = 'http://localhost:3000/account'">Account Info</button>
-                <button style="width:20%" onclick="window.location.href = 'http://localhost:3000/aboutUs'">About Us</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/'">Homepage</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/sellinglistings'">Selling Listings</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/buyinglistings'">Buying Listings</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/account'">Account Info</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/PriceChartSearch'">Create Listing</button>
+                <button style="width:16.6666%" onclick="window.location.href = 'http://localhost:3000/aboutUs'">About Us</button>
             </div>
         </nav>
         <div class="main">
