Users can now review buyers/sellers (if they completed a transaction)

--- a/views/accountInfo.handlebars
+++ b/views/accountInfo.handlebars
@@ -15,7 +15,7 @@
             <ul class="search">
         {{#each user.purchaseHistory}}
             <li>
-                <p>User purchased From: <a href="http://localhost:3000/{{this.username}}" target="_blank">{{this.username}}</a></p>
+                <p>User purchased From: <a href="http://localhost:3000/ProfilePage/{{this.username}}" target="_blank">{{this.username}}</a></p>
                 <p>Item purchased: {{this.title}}</p>
                 <p>Price purchased for: {{this.price}}</p>
                 {{!-- <form method="POST" id="listing-form" action="/LeaveReview" enctype="multipart/form-data">
@@ -32,7 +32,7 @@
             <ul class="search">
         {{#each user.salesHistory}}
             <li>
-                <p>User sold to: <a href="http://localhost:3000/{{this.username}}" target="_blank">{{this.username}}</a></p>
+                <p>User sold to: <a href="http://localhost:3000/ProfilePage/{{this.username}}" target="_blank">{{this.username}}</a></p>
                 <p>Item sold: {{this.title}}</p>
                 <p>Price sold for: {{this.price}}</p>
             </li>
