--- a/views/profilePage.handlebars
+++ b/views/profilePage.handlebars
@@ -1,6 +1,7 @@
 <h1>{{user.username}}'s Account Information</h1>
+<a href="/review/{{user._id}}">Click here to review</a>
     <div>
-         <h2>Overall Rating: {{user.overallRating}}</h2>
+        <h2>Overall Rating: {{user.overallRating}}</h2>
         <p>Username: {{user.username}}</p>
         <p>Date the account was created: {{user.doc}}</p>
         <p>Biography: {{user.biography}}</p>
