--- a/views/createReview.handlebars
+++ b/views/createReview.handlebars
@@ -3,9 +3,13 @@
 <p>Here, you can create a review for a user.</p>
 <p>Note: Buyers can review sellers; likewise, only sellers can review buyers</p>
 
+<p id="error">{{error}}</p>
+
 <form method="POST" id="review-form" action="">
     <label for="contentInput">Content for Review</label>
+    <br>
     <textarea id="contentInput" name="contentInput" rows="10" columns="20" placeholder="Enter review here"></textarea>
+    <br>
 
     <label for="ratingInput">Rating</label>
     <select id="ratingInput" name="rating" required>
@@ -16,6 +20,8 @@
           <option value="4">4</option>
           <option value="5">5</option>
       </select><br>
+    <button type="submit">Submit Review</button>
 </form>
 <p id="errorContent" hidden></p>
 <p id="errorRating" hidden></p>
+<script src="../public/js/reviewCheck.js"></script>
