PNG and Trades Options FIx

--- a/views/createBuyingListing.handlebars
+++ b/views/createBuyingListing.handlebars
@@ -52,7 +52,7 @@
                 <input id="priceInput" type="number" name="priceInput" required><br><br>
                 
                 <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
-                <textarea id="tradesInput" type="text" name="tradesInput" required></textarea><br><br>
+                <textarea id="tradesInput" type="text" name="tradesInput"></textarea><br><br>
                 
                 <label for="descriptionInput">Description:</label>
                 <textarea id="descriptionInput" type="text" name="descriptionInput" required></textarea><br><br>
