--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -26,7 +26,7 @@
                                 <li class="search">Shipping Methods: {{listings.shippingMethods}}</li><br>
                             {{else}}
                             {{/if}}
-                            {{#if listings.trades}}
+                            {{#if tradeCheck}}
                             <li class="search">
                                 Viable Trade Options:
                                 <ul>   
