--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -53,7 +53,7 @@
                 <input id="shippingPriceInput" type="number" name="shippingPriceInput" required><br><br>
                 
                 <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
-                <textarea id="tradesInput" type="text" name="tradesInput" required></textarea><br><br>
+                <textarea id="tradesInput" type="text" name="tradesInput"></textarea><br><br>
                 
                 <label for="descriptionInput">Description:</label>
                 <textarea id="descriptionInput" type="text" name="descriptionInput" required></textarea><br><br>
