--- a/views/createBuyingListing.handlebars
+++ b/views/createBuyingListing.handlebars
@@ -51,7 +51,7 @@
                 <label for="priceInput">Price:</label>
                 <input id="priceInput" type="number" name="priceInput" required><br><br>
                 
-                <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
+                <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma), Can be Left empty::</label>
                 <textarea id="tradesInput" type="text" name="tradesInput"></textarea><br><br>
                 
                 <label for="descriptionInput">Description:</label>
