--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -52,7 +52,7 @@
                 <label for="shippingPriceInput">Shipping Price:</label>
                 <input id="shippingPriceInput" type="number" name="shippingPriceInput" required><br><br>
                 
-                <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma):</label>
+                <label for="tradesInput">Please Input items you're willing to trade for (seperate the items by a comma), Can be Left empty:</label>
                 <textarea id="tradesInput" type="text" name="tradesInput"></textarea><br><br>
                 
                 <label for="descriptionInput">Description:</label>
