Changed "Brand New" -> "New"

--- a/views/createBuyingListing.handlebars
+++ b/views/createBuyingListing.handlebars
@@ -20,7 +20,7 @@
                 <label for="conditionInput">Listing's Main Condition:</label>
                 <select id="conditionInput" name="conditionInput" required>
                     <option value="">Select a Condition</option>
-                    <option value="Brand New">Brand New</option>
+                    <option value="New">New</option>
                     <option value="Like New/Open Box">Like New/Open Box</option>
                     <option value="Used">Used</option>
                     <option value="For Parts or Not Working">For Parts or Not Working</option>
