--- a/views/choice.handlebars
+++ b/views/choice.handlebars
@@ -1,5 +1,5 @@
 <h1>Select Transaction Method</h1>
 
 <p>Will you pay with cash or offer a trade item?</p>
-<button href="/cash">Cash/Credit</button>
-<button href="/trade">Trade Item</button>
+<button onclick="window.location.href ='http://localhost:3000/transaction/{{id}}'">Cash/Credit</button>
+<button onclick="window.location.href ='http://localhost:3000/offer/{{id}}'">Trade Item</button>
