--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -62,7 +62,7 @@
                 </div><br>
 </div>
 <div class="btn-group">
-<button class="purchase" onclick="window.location.href = 'http://localhost:3000/transaction/{{listings._id}}'">{{type}}</button>
+<button class="purchase" onclick="window.location.href = 'http://localhost:3000/choice/{{listings._id}}'">{{type}}</button>
 </div>
 {{#if listings.comments}}
     <h3>Comments</h3>
