--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -77,7 +77,7 @@
                     <option value="90 Day Returns (Seller pays for return shipping)">90 Day Returns (Seller pays for return shipping)</option>
                 </select><br><br>
 
-                <label for="imageInput">Submit images here:</label>
+                <label for="imageInput">Submit images here (Will only take .png/.jpg/.jpeg files):</label>
                 <input type="file" id="imageInput" name="imageInput" multiple required><br><br>
 
                 <label for="listingTypeInput">Confirm to make listing</label>
