--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -68,6 +68,35 @@
     </div>
 {{else}}
 {{/if}}
+<div>
+    <h2>Current Offers</h2>
+    {{#if offers}}
+        <ul class="search">
+        {{#each offers}}
+        <li class="search">
+            <h3>Offer From User: {{this.username}}</h3>
+            <p>Offer Product: {{this.title}}</p>
+            <p>Offer Description: {{this.description}}</p>
+            <P>Offer Images:</P>
+            {{#each this.attachments}}
+                <img alt="img" src="{{this}}">
+            {{/each}} 
+            {{#if ownPoster}}
+            
+            {{else}}
+            <form method="POST" action="" id="accept-offer-form">
+                <label for="acceptOfferInput">Confirm to make listing</label>
+                <input id="acceptOfferInput" type="checkbox" name="acceptOfferInput" value="True" required><br><br>
+                <button type="submit" >Take Offer</button>
+            </form>
+            {{/if}}
+        </li>
+        {{/each}}
+        </ul>
+    {{else}}
+    <p>No Offers Currently</p>
+    {{/if}}
+</div>
 {{#if listings.comments}}
     <h3>Comments</h3>
     {{#each listings.comments}}
