--- a/views/priceCharting.handlebars
+++ b/views/priceCharting.handlebars
@@ -14,3 +14,7 @@
                 </form>
                 <p id="errorSearch" hidden></p>
                         <script type='module' src="../public/js/searchCheck.js"></script>
+                {{#if error}}
+                <p>{{error}}</p>
+                {{else}}
+                {{/if}}
