--- a/views/trade.handlebars
+++ b/views/trade.handlebars
@@ -1,3 +1,4 @@
+<h1>Make An Offer</h1>
 <form method="POST" action="" id="trade-form">
     <label for="titleInput">Title</label>
     <textarea id="titleInput" type="text" name="titleInput" required></textarea><br><br>  
@@ -5,12 +6,9 @@
     <label for="descriptionInput">Description:</label>
     <textarea id="descriptionInput" type="text" name="descriptionInput" required></textarea><br><br>    
 
-    <label for="imageInput">Submit images here:</label>
-    <input type="file" id="imageInput" name="imageInput" multiple required><br><br>
 
      <button type="submit">Make Offer</button>
 </form>
 
 <p id="errorTitle" hidden></p>
 <p id="errorDesc" hidden></p>
-<p id="errorImgs" hidden></p>
