--- a/views/priceCharting.handlebars
+++ b/views/priceCharting.handlebars
@@ -1,8 +1,8 @@
 <h1>Price Chart Search</h1>
 <p>Get game details from Price Charts</p>
-                <form method="POST" id="search-form" action="">
+                <form method="POST" id="search-form" action="/PriceChartSearch">
                 <label for="searchInput">Input the Game Title:</label><br>
-                <textarea id="searchInput" type="text" name="searchInput" required></textarea><br>
+                <textarea id="searchInput" name="searchInput" required></textarea><br>
 
                 <label for="listingTypeInput">Listing type:</label>
                 <select id="listingTypeInput" name="listingTypeInput" required>
