--- a/views/sellingListings.handlebars
+++ b/views/sellingListings.handlebars
@@ -2,8 +2,9 @@
     <div class="search-container">
         <form method="POST" action="/sellinglistings">
         
-            <input type="text" id="searchBarTextInput" placeholder="Search..." name="searchBarTextInput"><br><br>
-            <label for="mainCondition">Main Condition:</label>
+            <label for="searchBarTextInput">Search Bar</label>
+            <input type="text" id="searchBarTextInput" name="searchBarTextInput"><br><br> 
+            <label for="mainConditionDropdown">Main Condition:</label>
                 <select id="mainConditionDropdown" name="mainConditionDropdown">
                     <option value="">Select a Main Condition</option>
                     <option value="New">New</option>
