--- a/views/buyingListings.handlebars
+++ b/views/buyingListings.handlebars
@@ -1,9 +1,9 @@
 <h1>Buying Bazaar</h1>
     <div class="search-container">
         <form method="POST" action="/buyinglistings">
-        
-            <input type="text" id="searchBarTextInput" placeholder="Search..." name="searchBarTextInput"><br><br>
-            <label for="mainCondition">Main Condition:</label>
+            <label for="searchBarTextInput">Search Bar</label>
+            <input type="text" id="searchBarTextInput" name="searchBarTextInput"><br><br>
+            <label for="mainConditionDropdown">Main Condition:</label>
                 <select id="mainConditionDropdown" name="mainConditionDropdown">
                     <option value="">Select a Main Condition</option>
                     <option value="New">New</option>
