--- a/views/createBuyingListing.handlebars
+++ b/views/createBuyingListing.handlebars
@@ -9,7 +9,7 @@
         <div>
             <form method="POST" id="listing-form" action="/PriceChartSearch" enctype="multipart/form-data">
 
-                <div id="listingTypeInput" value="Buy"></div>
+                <div id="listingTypingInput"></div>
 
                 <label for="TitleInput">Listing Title:</label>
                 <input id="TitleInput" type="text" name="TitleInput" required><br><br>
@@ -47,7 +47,7 @@
                 <input id="Other" type="checkbox" name="Other" value="Other"><br><br>
                 
                 <label for="descriptionInput">Description:</label>
-                <textarea id="descriptionInput" type="text" name="descriptionInput" required></textarea><br><br>
+                <textarea id="descriptionInput" name="descriptionInput" required></textarea><br><br>
 
                 <label for="shipMethodInput">Shipping Method:</label>
                 <select id="shipMethodInput" name="shipMethodInput" required>
@@ -85,23 +85,23 @@
                         {{#each chart}}
                         <li>
                         <ul class="search">
-                            <li class="search">Product Name: {{this.title}}</li><br>
-                            <li class="search">Release Date: {{this.releaseDate}}</li><br>
-                            <li class="search">Console Name: {{this.consoleName}}</li><br>
-                            <li class="search">Genre: {{this.genre}}</li><br>
-                            <li class="search">Price Chart ID: {{this.id}}</li><br>
-                            <li class="search">Box Only Price: ${{this.boxPrice}}</li><br>
-                            <li class="search">Complete in Box Price: ${{this.cibPrice}}</li><br>
-                            <li class="search">Game Only Price: ${{this.loosePrice}}</li><br>
-                            <li class="search">Manual Only Price: ${{this.manualPrice}}</li><br>
-                            <li class="search">New in Box Price: ${{this.newPrice}}</li><br>
-                            <li class="search">Graded Price: ${{this.gradedPrice}}</li><br>
+                            <li class="search">Product Name: {{this.title}}</li>
+                            <li class="search">Release Date: {{this.releaseDate}}</li>
+                            <li class="search">Console Name: {{this.consoleName}}</li>
+                            <li class="search">Genre: {{this.genre}}</li>
+                            <li class="search">Price Chart ID: {{this.id}}</li>
+                            <li class="search">Box Only Price: ${{this.boxPrice}}</li>
+                            <li class="search">Complete in Box Price: ${{this.cibPrice}}</li>
+                            <li class="search">Game Only Price: ${{this.loosePrice}}</li>
+                            <li class="search">Manual Only Price: ${{this.manualPrice}}</li>
+                            <li class="search">New in Box Price: ${{this.newPrice}}</li>
+                            <li class="search">Graded Price: ${{this.gradedPrice}}</li>
                         </ul>
-                        </li><br>
+                        </li>
                         {{/each}}
                     </ol>
                     {{else}}
                     {{/if}}
                 </div>
         </div>
-        <script src="../public/js/buyingListingCheck.js">
+        <script src="../public/js/buyingListingCheck.js"></script>
