--- a/views/accountInfo.handlebars
+++ b/views/accountInfo.handlebars
@@ -12,6 +12,7 @@
         <div class="row">
         <div class="column">
             <h3>Purchase History</h3>
+            {{#if user.purchaseHistory}}
             <ul class="search">
         {{#each user.purchaseHistory}}
             <li>
@@ -22,9 +23,11 @@
             </li>
         {{/each}}
             </ul>
+            {{/if}}
         </div>
         <div class="column">
             <h3>Sales History</h3>
+            {{#if user.salesHistory}}
             <ul class="search">
         {{#each user.salesHistory}}
             <li>
@@ -34,6 +37,7 @@
             </li>
         {{/each}}
             </ul>
+            {{/if}}
         </div>
         </div>
          {{#if reviews}}
