--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -85,17 +85,17 @@
 
                 <button type="submit">Register</button>
             </form>
-            <p id="errorType" hidden></p>
-            <p id="errorTitle" hidden></p>
-            <p id="errorPCID" hidden></p>
-            <p id="errorMainCond" hidden></p>
-            <p id="errorPrice" hidden></p>
-            <p id="errorShipPrice" hidden></p>
-            <p id="errorTrades" hidden></p>
-            <p id="errorDesc" hidden></p>
-            <p id="errorRetPol" hidden></p>
-            <p id="errorShipMethod" hidden></p>
-            <p id="errorImgs" hidden></p>
+            <p id="errorType"  class="error" hidden></p>
+            <p id="errorTitle" class="error"  hidden></p>
+            <p id="errorPCID" class="error"  hidden></p>
+            <p id="errorMainCond" class="error"  hidden></p>
+            <p id="errorPrice" class="error"  hidden></p>
+            <p id="errorShipPrice" class="error"  hidden></p>
+            <p id="errorTrades" class="error"  hidden></p>
+            <p id="errorDesc" class="error"  hidden></p>
+            <p id="errorRetPol" class="error"  hidden></p>
+            <p id="errorShipMethod"  class="error" hidden></p>
+            <p id="errorImgs" class="error"  hidden></p>
             {{#if error}}
             <p>{{error}}</p>
             {{/if}}
