--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -77,13 +77,12 @@
             <h3>Offer From User: {{this.username}}</h3>
             <p>Offer Product: {{this.title}}</p>
             <p>Offer Description: {{this.desc}}</p>
-            {{#if ownPoster}}
-            
-            {{else}}
-                <button onclick="window.location.href = 'http://localhost:3000/takeOffer/{{this.listingId}}'">Take Offer</button>
-            {{/if}}
         </li>
         {{/each}}
+        {{#if owner}}
+            <button onclick="window.location.href = 'http://localhost:3000/takeOffer/{{listings._id}}'">Take Offer</button>
+            {{else}}
+            {{/if}}
         </ul>
     {{else}}
     <p>No Offers Currently</p>
